--- a/index.html
+++ b/index.html
@@ -5,23 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS RESTCountries Lab</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <h1>JS RESTCountries Lab</h1>
     <section id="countriesContainer">
+        <form>
+            <input type="text" placeholder="Filter country">
+            <input type="submit">
+        </form>
+
         <ul id="countriesList">
             <p>Awaiting API...</p>
-            <div>
-                <form>
-                  <label for="search">Search:</label>
-                  <input type="text" id="search" name="search">
-                  <button type="submit">Submit</button>
-                </form>
-              </div>
-              <div>
                 <ul id="countries"></ul>
-              </div>
         </ul>
     </section>
 </body>
